--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         </form>
   </div>
   <div *ngIf="showOutput" class="col-md-6">
-    You grade is 
+    Nitipoom grade is 
     <button type="button" [class]=outputClass>{{grade}}</button>
   </div>
 </div>
